# ai-innovation-hkt

./: .env.example  .gitignore  Makefile  PROBLEM_STATEMENT.md  README.md  pyproject.toml
.claude/agents/: backend-developer.md  database-engineer.md  devops-engineer.md  frontend-developer.md  test-engineer.md  ui-ux-designer.md
.github/workflows/: ci.yml
ai/: digest.py  extraction.py  markers.py  qa.py  schemas.py
ai-docs/: README.md  VISION.md  architecture.md  data-model.md  deployment.md  design-v2.md  features.md  fix_plan.md  pitch-submission.md  plan.md  runbook.md  testing-strategy.md  work-split.md
ai-docs/debates/: EVM-001-dashboard-authentication.md  EVM-002-marker-double-materialization.md  EVM-003-multi-operation-decisions.md  EVM-004-overlapping-effect-windows.md  EVM-005-authority-changes-while-pending.md  EVM-006-canceled-dependency-predecessor.md  EVM-007-qa-truth-and-access.md  EVM-008-v1-v2-contract-drift.md  EVM-009-temporal-group-cutover.md  EVM-010-transactional-outbox.md  EVM-011-file-ingestion-trust-boundary.md  EVM-012-late-event-ordering.md  (+11 more)
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  repository.py
backend/evermind/: config.py  demo.py
backend/evermind/api/: deps.py  evidence.py  main.py  telegram_poll.py
backend/evermind/api/routers/: connectors_router.py  decisions_router.py  ingestion_router.py  knowledge_router.py  org_router.py  signals_router.py  surfacing_router.py  tasks_router.py  workspace_router.py
backend/evermind/connectors/: health.py  models.py  replay.py  service.py  telegram.py  transcript.py
backend/evermind/contracts/: commands.py  enums.py  events.py
backend/evermind/db/: base.py  eventlog.py  session.py
backend/evermind/decisions/: authority.py  event_routes.py  gateway.py  models.py  service.py  task_state.py
backend/evermind/ingestion/: extraction.py  identity.py  models.py  service.py
backend/evermind/knowledge/: service.py
backend/evermind/llm/: client.py
backend/evermind/org/: models.py  seed.py  seed_ids.py  seed_schema.py  seed_service.py  service.py
backend/evermind/scheduler/: jobs.py
backend/evermind/signals/: consumer.py  models.py  promotion.py  radar.py  service.py
backend/evermind/surfacing/: consumer.py  models.py  service.py
backend/evermind/tasks/: consumer.py  dependencies.py  fold.py  merge.py  models.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0003_decision_task_context.py  0004_signals_promotion.py  0004_telegram_ingestion_reliability.py
backend/tests/: conftest.py  test_authz_scoping.py  test_fixtures_l0.py  test_org_seed.py
backend/tests/p0/: test_seed_cli.py  test_seed_contract.py  test_seed_service.py
backend/tests/scenarios/: test_blocker_radar_regressions.py  test_capture_health.py  test_llm_extraction.py  test_merge_split_transfer.py  test_replay_connector.py  test_signal_promotion.py  test_signal_radar.py  test_signals_consumer.py  test_signals_ledger.py  test_surfacing.py  test_tasks_fold.py  test_telegram_connector.py  test_telegram_marker_identity.py  test_transcript_connector.py
data/: README.md  answer_key.json  corpus.jsonl  golden_set.json  meeting-2026-06-28.txt
data-v2/: README.md  answer_key.json  corpus.jsonl  meeting-2026-09-07.txt  org.json
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/: .env.example  Caddyfile  docker-compose.yml  schema.sql
ingestion/: replay.py  transcript.py
tests/: test_contracts.py  test_corpus.py
(+38 files in other folders)
