[project]
name = "orgmemory"
version = "0.1.0"
description = "OrgMemory — ambient org memory for a volunteer NPO (48h hackathon build)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "backend", "ingestion"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
