[project]
name = "evermind"
version = "0.1.0"
description = "EverMind backend — decisions/tasks core, ingestion, surfacing, API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
knowledge = [
    "langchain-postgres>=0.0.9",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evermind"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "evermind"

# Import rule (architecture.md §Backend module contract):
# - contracts: no internal imports
# - tasks: only contracts
# - decisions: only contracts + org (read-only)
# - nothing imports api
[[tool.importlinter.contracts]]
name = "contracts has no internal deps"
type = "forbidden"
source_modules = ["evermind.contracts"]
forbidden_modules = [
    "evermind.org", "evermind.llm", "evermind.connectors", "evermind.ingestion",
    "evermind.decisions", "evermind.tasks", "evermind.signals", "evermind.surfacing",
    "evermind.knowledge", "evermind.api", "evermind.scheduler",
]

[[tool.importlinter.contracts]]
name = "tasks imports only contracts"
type = "forbidden"
source_modules = ["evermind.tasks"]
forbidden_modules = [
    "evermind.org", "evermind.llm", "evermind.connectors", "evermind.ingestion",
    "evermind.decisions", "evermind.signals", "evermind.surfacing",
    "evermind.knowledge", "evermind.api", "evermind.scheduler",
]

[[tool.importlinter.contracts]]
name = "decisions imports only contracts + org"
type = "forbidden"
source_modules = ["evermind.decisions"]
forbidden_modules = [
    "evermind.llm", "evermind.connectors", "evermind.ingestion",
    "evermind.tasks", "evermind.signals", "evermind.surfacing",
    "evermind.knowledge", "evermind.api", "evermind.scheduler",
]

[[tool.importlinter.contracts]]
name = "nothing imports api"
type = "forbidden"
source_modules = [
    "evermind.contracts", "evermind.org", "evermind.llm", "evermind.connectors",
    "evermind.ingestion", "evermind.decisions", "evermind.tasks", "evermind.signals",
    "evermind.surfacing", "evermind.knowledge", "evermind.scheduler",
]
forbidden_modules = ["evermind.api"]
